# relay-serial-com

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  autogen.sh  bluetooth.c  configure  configure.ac  main.c  phone.c  serial_server.c  serial_server.h  utils.c  utils.h
libserialport/: configure.ac
libserialport/src/: Makefile  Makefile.in  config.h  config.h.in~  libserialport.h
openwrt/: Makefile
openwrt/files/: relay-serial-com.init
src/: Makefile.am  Makefile.in  bluetooth.h  serial_server.c  serial_server.h  utils.h
